--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "grunt-contrib-clean": "^0.6.0",
     "grunt-es6-module-transpiler": "^0.6.0",
     "grunt-mocha-test": "^0.11.0",
-    "mocha": "^1.21.4"
+    "mocha": "^1.21.4",
+    "should": "^4.0.4"
   }
 }
